--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ canvas {
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
-
+	min-height: 600px;
 	width: 100%;
 
     -webkit-background-size: 100%;
