--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ h4, h5, h6 {
 
 .menu {
 	position: fixed;
+  font-family: "Century Gothic", sans-serif;
 	right: -200px;
 	width: 260px;
 	height: 100%;
@@ -116,9 +117,9 @@ h4, h5, h6 {
 }
 
 .menu h1.logo a {
-	font-family: "Work Sans", sans-serif;
+	font-family: "Century Gothic", sans-serif;
 	font-size: 16px;
-	font-weight: 700;
+	font-weight: 600;
 	letter-spacing: 0.15em;
 	line-height: 40px;
 	text-transform: uppercase;
@@ -127,7 +128,7 @@ h4, h5, h6 {
 }
 
 .menu h1.logo a:hover {
-	color: #f85c37;
+	color: #ff0000;
 }
 
 .menu img.logo {
@@ -140,7 +141,7 @@ h4, h5, h6 {
 	color: #808080;
 	display: block;
 	font-size: 12px;
-	font-weight: 700;
+	font-weight: 300;
 	line-height: 40px;
 	letter-spacing: 0.1em;
 	text-transform: uppercase;
