--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ button {
      margin: 4 4px;
      border-radius: 16px;
      border: none;
-     color: white;
+     color: #000000;
      text-align: center;
      text-decoration: none;
 }
